--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-OPENAI_SECRET_KEY = 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
+OPENAI_SECRET_KEY = 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
+PORT = 5000
